--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -39,7 +39,7 @@ nav{
     }
 }
 
-#main {
+.c{
     width: @desktop;
     margin-left: auto;
     margin-right: auto;
@@ -47,6 +47,10 @@ nav{
     @media(max-width: @desktop) {
        width: 100%;
     }
+}
+
+#main {
+   
 
     article{
         padding: 20px;
