--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -92,6 +92,79 @@ form {
     }
 }
 
+.form {
+    display: none;
+    position: fixed;
+    top: 0;
+    width: 100vw;
+    height: 100dvh;
+    backdrop-filter: blur(10px);
+    /* Blur effect on the background */
+
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+
+    align-items: center;
+    justify-content: center;
+    box-sizing: border-box;
+
+    &.show {
+        display: flex;
+    }
+
+    form,
+    .message {
+        background-color: #00486F;
+        color: white;
+        width: 50%;
+        max-width: 800px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        /* Optional: shadow for depth */
+        padding: 10vw;
+
+        h3 {
+            color: white;
+            text-align: center;
+        }
+
+        .btn {
+            background-color: white;
+            color: #00486F;
+        }
+
+        .field {
+            flex-direction: column;
+
+            label {
+                margin-bottom: 4px;
+            }
+
+            &.submit {
+                input {
+                    color: #00486F;
+                    font-weight: bold;
+                }
+            }
+
+            &.checkbox {
+                display: flex;
+                flex-direction: row;
+            }
+
+            .asterisk {
+                margin-left: 5px;
+            }
+
+            a {
+                color: white;
+            }
+        }
+    }
+}
+
 .program {
     .e {
         display: flex;
