--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -80,7 +80,7 @@ nav{
         display: flex;
     }
     &.inlineform{
-            display: flex;
+          display: flex !important;
             backdrop-filter: none;
             position: relative;
 
