--- a/assets/css/base.less
+++ b/assets/css/base.less
@@ -104,7 +104,7 @@ nav{
         margin-bottom: 16px;
         &.checkbox{
             flex-direction: row-reverse;
-            input{
+            input,select,textarea{
                 margin-right: 20px;
             }
         }
@@ -116,7 +116,7 @@ nav{
             }
         }
 
-        input {
+        input,select,textarea {
             border-radius: 12px;
             border: none;
             padding: 10px;
